added mobile navbar and sass folders

--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="dist/style.css">
-    <title>Document</title>
+    <title>Micaela Lay</title>
 </head>
 <body>
+    <div class="main-container">
+        <nav class="nav">
+            <ul class="nav__mobile">
+                <li class="nav-link">
+                    <a href="#">
+                        <span class="link-icon"><i class="fa-solid fa-house"></i></span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">
+                        <span class="link-icon"><i class="fa-solid fa-hand-sparkles"></i></span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">
+                        <span class="link-icon"><i class="fa-solid fa-laptop"></i></span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">
+                        <span class="link-icon"><i class="fa-solid fa-phone"></i></span>
+                    </a>
+                </li>
+            </ul>
+            <ul class="nav__desktop">
+                <li class="nav-link">
+                    <a class="nav-link" href="#">inicio</a>
+                </li>
+                <li class="nav-link">
+                    <a class="nav-link" href="#">sobre mí</a>
+                </li>
+                <li class="nav-link">
+                    <a class="nav-link" href="#">proyectos</a>
+                </li>
+                <li class="nav-link">
+                    <a class="nav-link" href="#">contacto</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
