added hero styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Lexend:wght@400;700&family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="dist/style.css">
     <title>Micaela Lay</title>
@@ -16,7 +16,7 @@
         <nav class="nav">
             <ul class="nav__mobile">
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#home">
                         <span class="link-icon"><i class="fa-solid fa-house"></i></span>
                     </a>
                 </li>
@@ -38,19 +38,45 @@
             </ul>
             <ul class="nav__desktop">
                 <li class="nav-link">
-                    <a class="nav-link" href="#">inicio</a>
+                    <a class="nav-link" href="#">home</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">sobre mí</a>
+                    <a class="nav-link" href="#">about</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">proyectos</a>
+                    <a class="nav-link" href="#">projects</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">contacto</a>
+                    <a class="nav-link" href="#">contact</a>
                 </li>
             </ul>
         </nav>
+        <section class="hero" id="home">
+            <div class="hero__image">
+                <div>
+                    <div class="image-container">
+                        <img class="main-image" src="/assets/main-image.jpeg" alt="">
+                    </div>
+                    <button class="cat__button">
+                        <img src="/assets/tortoiseshell.png" alt="">
+                    </button>
+                </div>
+                <p>hello world...</p>
+            </div>
+            <div class="hero__title">
+                <h2>Hi there, i'm</h2>
+                <h1>Micaela Lay</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, illo!</p>
+                <div class="social-icon">
+                    <a href="">
+                        <span><i class="fa-brands fa-github"></i></span>
+                    </a>
+                    <a href="">
+                        <span><i class="fa-brands fa-linkedin"></i></span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="js/script.js"></script>
 </body>
