added about section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#about">
                         <span class="link-icon"><i class="fa-solid fa-hand-sparkles"></i></span>
                     </a>
                 </li>
@@ -75,6 +75,44 @@
                         <span><i class="fa-brands fa-linkedin"></i></span>
                     </a>
                 </div>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <div class="container about-me">
+                <h2>about me</h2>
+                <div class="border"></div>
+                <div class="container__info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit ipsa voluptatum molestias corporis illum, dolore quaerat eligendi corrupti odio nulla recusandae minima iure saepe sit eum tempore vero itaque assumenda. Ut ex ea reiciendis mollitia fugit optio laborum alias?</p>
+                </div>  
+            </div>
+            <div class="container skills">
+                <h2>skills</h2>
+                <div class="border"></div>
+                <div class="container__info">
+                    <ul>
+                        <li>
+                            <span>HTML5</span>
+                        </li>
+                        <li>
+                            <span>CSS3</span>
+                        </li>
+                        <li>
+                            <span>JavaScript S6</span>
+                        </li>
+                        <li>
+                            <span>React.js</span>
+                        </li>
+                        <li>
+                            <span>TypeScript</span>
+                        </li>
+                        <li>
+                            <span>Sass</span>
+                        </li>
+                        <li>
+                            <span>Tailwind CSS</span>
+                        </li>
+                    </ul>
+                </div>  
             </div>
         </section>
     </div>
