changed colors of background and font

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#projects">
                         <span class="link-icon"><i class="fa-solid fa-laptop"></i></span>
                     </a>
                 </li>
                 <li class="nav-link">
                     <a href="#">
-                        <span class="link-icon"><i class="fa-solid fa-phone"></i></span>
+                        <span class="link-icon"><i class="fa-regular fa-id-badge"></i></span>
                     </a>
                 </li>
             </ul>
@@ -113,6 +113,16 @@
                         </li>
                     </ul>
                 </div>  
+            </div>
+        </section>
+        <section class="projects" id="projects">
+            <h2>projects</h2>
+            <div class="border"></div>
+            <div class="container__info">
+                <div class="card">
+                    <img src="" alt="">
+                    
+                </div>
             </div>
         </section>
     </div>
