added base cards for projects

--- a/index.html
+++ b/index.html
@@ -91,37 +91,115 @@
                 <div class="container__info">
                     <ul>
                         <li>
-                            <span>HTML5</span>
+                            <span>•</span> HTML5
                         </li>
                         <li>
-                            <span>CSS3</span>
+                            <span>•</span> CSS3
                         </li>
                         <li>
-                            <span>JavaScript S6</span>
+                            <span>•</span> JavaScript S6
                         </li>
                         <li>
-                            <span>React.js</span>
+                            <span>•</span> React.js
                         </li>
                         <li>
-                            <span>TypeScript</span>
+                            <span>•</span> TypeScript
                         </li>
                         <li>
-                            <span>Sass</span>
+                            <span>•</span> Sass
                         </li>
                         <li>
-                            <span>Tailwind CSS</span>
+                            <span>•</span> Tailwind CSS
                         </li>
                     </ul>
                 </div>  
             </div>
         </section>
         <section class="projects" id="projects">
-            <h2>projects</h2>
-            <div class="border"></div>
-            <div class="container__info">
-                <div class="card">
-                    <img src="" alt="">
-                    
+            <div class="container">
+                <h2>projects</h2>
+                <div class="border"></div>
+                <div class="container__info">
+                    <div class="card">
+                        <img src="./assets/image-not-found.png" alt="">
+                        <div class="card__info">
+                            <h3 class="card__name">name</h3>
+                            <p class="description">Lorem ipsum dolor sit amet.</p>
+                            <p class="tags">
+                                Lorem, Lorem, Lorem
+                            </p>
+                            <div class="links">
+                                <a href="">
+                                    view site 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                                <a href="">
+                                    view repository 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/image-not-found.png" alt="">
+                        <div class="card__info">
+                            <h3 class="card__name">name</h3>
+                            <p class="description">Lorem ipsum dolor sit amet.</p>
+                            <p class="tags">
+                                Lorem, Lorem, Lorem
+                            </p>
+                            <div class="links">
+                                <a href="">
+                                    view site 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                                <a href="">
+                                    view repository 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/image-not-found.png" alt="">
+                        <div class="card__info">
+                            <h3 class="card__name">name</h3>
+                            <p class="description">Lorem ipsum dolor sit amet.</p>
+                            <p class="tags">
+                                Lorem, Lorem, Lorem
+                            </p>
+                            <div class="links">
+                                <a href="">
+                                    view site 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                                <a href="">
+                                    view repository 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/image-not-found.png" alt="">
+                        <div class="card__info">
+                            <h3 class="card__name">name</h3>
+                            <p class="description">Lorem ipsum dolor sit amet.</p>
+                            <p class="tags">
+                                Lorem, Lorem, Lorem
+                            </p>
+                            <div class="links">
+                                <a href="">
+                                    view site 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                                <a href="">
+                                    view repository 
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
