added contact section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="#contact">
                         <span class="link-icon"><i class="fa-regular fa-id-badge"></i></span>
                     </a>
                 </li>
@@ -64,7 +64,7 @@
                 <p>hello world...</p>
             </div>
             <div class="hero__title">
-                <h2>Hi there, i'm</h2>
+                <h2>Hi there, I'm</h2>
                 <h1>Micaela Lay</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, illo!</p>
                 <div class="social-icon">
@@ -89,6 +89,7 @@
                 <h2>skills</h2>
                 <div class="border"></div>
                 <div class="container__info">
+                    <p>Apart from the Ada ITW course, I continued to expand and improve my skills by learning on my own. I'm currently improving my React.js skills to learn React Native.</p>
                     <ul>
                         <li>
                             <span>•</span> HTML5
@@ -120,6 +121,7 @@
                 <h2>projects</h2>
                 <div class="border"></div>
                 <div class="container__info">
+                    <p>I like to stay busy and always have a project in the works. This are some of the applications I've been dedicated my time to.</p>
                     <div class="card">
                         <img src="./assets/image-not-found.png" alt="">
                         <div class="card__info">
@@ -198,6 +200,47 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact" id="contact">
+            <div class="container">
+                <h2>contact me</h2>
+                <div class="border"></div>
+                <div class="container__info">
+                    <p>Feel free to reach out if you're looking for a developer, have a question, or just want to connect.</p>
+                    <div class="social-links">
+                        <div>
+                            <p>
+                                <i class="fa-solid fa-envelope"></i>
+                                Email: 
+                            </p>
+                            <a href="mailto:micaelalay003@gmail.com" target="_blank">
+                                <span>micaelalay003@gmail.com</span>
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            </a>
+                        </div>
+                        <div>
+                            <p>
+                                <i class="fa-brands fa-linkedin"></i>
+                                LinkedIn:
+                            </p>
+                            <a href="https://www.linkedin.com/in/micaela-lay/" target="_blank">
+                                <span>Micaela Lay</span>
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            </a>
+                        </div>
+                        <div>
+                            <p>
+                                <i class="fa-brands fa-github"></i>
+                                GitHub: 
+                            </p>
+                            <a href="https://github.com/pyrolay" target="_blank">
+                                <span>pyrolay</span>
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
