--- a/index.html
+++ b/index.html
@@ -246,6 +246,17 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <h2>Micaela Lay</h2>
+            <div class="theme">
+                <p>Change Theme</p>
+                <div class="theme__colors">
+                    <button class="theme__light active"></button>
+                    <button class="theme__dark"></button>
+                    <button class="theme__pride"></button>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="js/script.js"></script>
 </body>
