--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             </ul>
             <ul class="nav__desktop">
                 <li class="nav-link">
-                    <a class="nav-link" href="#">home</a>
+                    <a href="#home">home</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">about</a>
+                    <a href="#about">about</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">projects</a>
+                    <a href="#projects">projects</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" href="#">contact</a>
+                    <a href="#contact">contact</a>
                 </li>
             </ul>
         </nav>
@@ -56,10 +56,10 @@
                 <div>
                     <div class="image-container">
                         <img class="main-image" src="/assets/main-image.jpeg" alt="">
+                        <button class="cat__button">
+                            <img src="/assets/tortoiseshell.png" alt="">
+                        </button>
                     </div>
-                    <button class="cat__button">
-                        <img src="/assets/tortoiseshell.png" alt="">
-                    </button>
                 </div>
                 <p>hello world...</p>
             </div>
