added scroll function

--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
     <div class="main-container">
         <nav class="nav">
             <ul class="nav__mobile">
-                <li class="nav-link">
+                <li class="nav-link active" name="home">
                     <a href="#home">
                         <span class="link-icon"><i class="fa-solid fa-house"></i></span>
                     </a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="about">
                     <a href="#about">
                         <span class="link-icon"><i class="fa-solid fa-hand-sparkles"></i></span>
                     </a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="projects">
                     <a href="#projects">
                         <span class="link-icon"><i class="fa-solid fa-laptop"></i></span>
                     </a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="contact">
                     <a href="#contact">
                         <span class="link-icon"><i class="fa-regular fa-id-badge"></i></span>
                     </a>
                 </li>
             </ul>
             <ul class="nav__desktop">
-                <li class="nav-link">
+                <li class="nav-link" name="home">
                     <a href="#home">home</a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="about">
                     <a href="#about">about</a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="projects">
                     <a href="#projects">projects</a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-link" name="contact">
                     <a href="#contact">contact</a>
                 </li>
             </ul>
