--- a/index.html
+++ b/index.html
@@ -122,83 +122,85 @@
                 <div class="border"></div>
                 <div class="container__info">
                     <p>I like to stay busy and always have a project in the works. This are some of the applications I've been dedicated my time to.</p>
-                    <div class="card">
-                        <img src="./assets/image-not-found.png" alt="">
-                        <div class="card__info">
-                            <h3 class="card__name">name</h3>
-                            <p class="description">Lorem ipsum dolor sit amet.</p>
-                            <p class="tags">
-                                Lorem, Lorem, Lorem
-                            </p>
-                            <div class="links">
-                                <a href="">
-                                    view site 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
-                                <a href="">
-                                    view repository 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
+                    <div class="card__container">
+                        <div class="card">
+                            <img src="./assets/image-not-found.png" alt="">
+                            <div class="card__info">
+                                <h3 class="card__name">name</h3>
+                                <p class="description">Lorem ipsum dolor sit amet.</p>
+                                <p class="tags">
+                                    Lorem, Lorem, Lorem
+                                </p>
+                                <div class="links">
+                                    <a href="">
+                                        view site 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                    <a href="">
+                                        view repository 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/image-not-found.png" alt="">
-                        <div class="card__info">
-                            <h3 class="card__name">name</h3>
-                            <p class="description">Lorem ipsum dolor sit amet.</p>
-                            <p class="tags">
-                                Lorem, Lorem, Lorem
-                            </p>
-                            <div class="links">
-                                <a href="">
-                                    view site 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
-                                <a href="">
-                                    view repository 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
+                        <div class="card">
+                            <img src="./assets/image-not-found.png" alt="">
+                            <div class="card__info">
+                                <h3 class="card__name">name</h3>
+                                <p class="description">Lorem ipsum dolor sit amet.</p>
+                                <p class="tags">
+                                    Lorem, Lorem, Lorem
+                                </p>
+                                <div class="links">
+                                    <a href="">
+                                        view site 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                    <a href="">
+                                        view repository 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/image-not-found.png" alt="">
-                        <div class="card__info">
-                            <h3 class="card__name">name</h3>
-                            <p class="description">Lorem ipsum dolor sit amet.</p>
-                            <p class="tags">
-                                Lorem, Lorem, Lorem
-                            </p>
-                            <div class="links">
-                                <a href="">
-                                    view site 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
-                                <a href="">
-                                    view repository 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
+                        <div class="card">
+                            <img src="./assets/image-not-found.png" alt="">
+                            <div class="card__info">
+                                <h3 class="card__name">name</h3>
+                                <p class="description">Lorem ipsum dolor sit amet.</p>
+                                <p class="tags">
+                                    Lorem, Lorem, Lorem
+                                </p>
+                                <div class="links">
+                                    <a href="">
+                                        view site 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                    <a href="">
+                                        view repository 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/image-not-found.png" alt="">
-                        <div class="card__info">
-                            <h3 class="card__name">name</h3>
-                            <p class="description">Lorem ipsum dolor sit amet.</p>
-                            <p class="tags">
-                                Lorem, Lorem, Lorem
-                            </p>
-                            <div class="links">
-                                <a href="">
-                                    view site 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
-                                <a href="">
-                                    view repository 
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </a>
+                        <div class="card">
+                            <img src="./assets/image-not-found.png" alt="">
+                            <div class="card__info">
+                                <h3 class="card__name">name</h3>
+                                <p class="description">Lorem ipsum dolor sit amet.</p>
+                                <p class="tags">
+                                    Lorem, Lorem, Lorem
+                                </p>
+                                <div class="links">
+                                    <a href="">
+                                        view site 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                    <a href="">
+                                        view repository 
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
