added base for theme change

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <h1>Micaela Lay</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, illo!</p>
                 <div class="social-icon">
-                    <a href="">
+                    <a href="https://github.com/pyrolay" target="_blank">
                         <span><i class="fa-brands fa-github"></i></span>
                     </a>
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/micaela-lay/" target="_blank">
                         <span><i class="fa-brands fa-linkedin"></i></span>
                     </a>
                 </div>
@@ -253,9 +253,8 @@
             <div class="theme">
                 <p>Change Theme</p>
                 <div class="theme__colors">
-                    <button class="theme__light active"></button>
-                    <button class="theme__dark"></button>
-                    <button class="theme__pride"></button>
+                    <button name="light" class="theme__light"></button>
+                    <button name="dark" class="theme__dark"></button>
                 </div>
             </div>
         </footer>
