--- a/index.html
+++ b/index.html
@@ -253,8 +253,12 @@
             <div class="theme">
                 <p>Change Theme</p>
                 <div class="theme__colors">
-                    <button name="light" class="theme__light"></button>
-                    <button name="dark" class="theme__dark"></button>
+                    <a href="#home">
+                        <button name="light" class="theme__light"></button>
+                    </a>
+                    <a href="#home">
+                        <button name="dark" class="theme__dark"></button>
+                    </a>
                 </div>
             </div>
         </footer>
